feat(instance-storage): Add new date type fields to Instance schema, remove computation logic for publicationPeriod field.