@@ -7,6 +7,9 @@ import static org.folio.okapi.common.XOkapiHeaders.TENANT;
 import static org.folio.rest.jaxrs.model.AsyncMigrationJob.JobStatus.CANCELLED;
 import static org.folio.rest.jaxrs.model.AsyncMigrationJob.JobStatus.IN_PROGRESS;
 import static org.folio.rest.persist.PgUtil.postgresClient;
+import static org.folio.rest.support.http.InterfaceUrls.holdingsStorageUrl;
+import static org.folio.rest.support.http.InterfaceUrls.instancesStorageUrl;
+import static org.folio.rest.support.http.InterfaceUrls.itemsStorageUrl;
 import static org.folio.utility.ModuleUtility.getVertx;
 import static org.folio.utility.RestUtility.TENANT_ID;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -22,9 +25,7 @@ import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.spy;
 
 import io.vertx.core.Context;
-import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -42,12 +43,10 @@ import org.folio.rest.jaxrs.model.AsyncMigrations;
 import org.folio.rest.jaxrs.model.EffectiveCallNumberComponents;
 import org.folio.rest.jaxrs.model.Processed;
 import org.folio.rest.jaxrs.model.Published;
-import org.folio.rest.persist.Criteria.Criteria;
-import org.folio.rest.persist.Criteria.Criterion;
 import org.folio.rest.persist.PostgresClientFuturized;
 import org.folio.rest.support.sql.TestRowStream;
 import org.folio.services.migration.async.AsyncMigrationContext;
-import org.folio.services.migration.async.PublicationPeriodMigrationJobRunner;
+import org.folio.services.migration.async.ShelvingOrderMigrationJobRunner;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
@@ -68,12 +67,12 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     return new AsyncMigrationJob()
       .withJobStatus(IN_PROGRESS)
       .withId(UUID.randomUUID().toString())
-      .withMigrations(Collections.singletonList("publicationPeriodMigration"))
+      .withMigrations(Collections.singletonList("itemShelvingOrderMigration"))
       .withSubmittedDate(new Date());
   }
 
   @Test
-  public void canMigrateItemsInstances() {
+  public void canMigrateItems() {
     var numberOfRecords = 101;
 
     var holdingsRecordId = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
@@ -83,29 +82,8 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
         .withItemLevelCallNumber("K1 .M44")
         .withEffectiveCallNumberComponents(new EffectiveCallNumberComponents().withCallNumber("K1 .M44")))));
 
-    IntStream.range(0, numberOfRecords).parallel().forEach(v ->
-      instancesClient.create(new JsonObject()
-        .put("title", "test" + v)
-        .put("source", "MARC")
-        .put("instanceTypeId", "30fffe0e-e985-4144-b2e2-1e8179bdb41f")
-        .put("publication", new JsonArray()
-          .add(new JsonObject()
-            .put("role", "Publication")
-            .put("place", "New York, NY, United States of America")
-            .put("publisher", "Oxford University Press")
-            .put("dateOfPublication", "[2018]"))
-          .add(new JsonObject()
-            .put("dateOfPublication", "©2018"))
-        )));
-
-    String sql = "update " + getPostgresClientFuturized().getFullTableName("instance")
-      + " set jsonb = jsonb - 'publicationPeriod' where jsonb->> 'title' like 'test%'";
-    postgresClient(getContext(), okapiHeaders()).execute(sql);
-    await().atMost(10, SECONDS)
-      .until(() -> instancesClient.getByQuery("?query=publicationPeriod.start==2018").isEmpty());
-
     var migrationJob = asyncMigration.postMigrationJob(new AsyncMigrationJobRequest()
-      .withMigrations(Arrays.asList("publicationPeriodMigration", "itemShelvingOrderMigration")));
+      .withMigrations(List.of("itemShelvingOrderMigration")));
 
     await().atMost(25, SECONDS).until(() -> asyncMigration.getMigrationJob(migrationJob.getId())
       .getJobStatus() == AsyncMigrationJob.JobStatus.COMPLETED);
@@ -113,14 +91,15 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     var job = asyncMigration.getMigrationJob(migrationJob.getId());
 
     assertThat(job.getPublished().stream().map(Published::getCount)
-      .mapToInt(Integer::intValue).sum(), is(numberOfRecords * 2));
+      .mapToInt(Integer::intValue).sum(), is(numberOfRecords));
     assertThat(job.getProcessed().stream().map(Processed::getCount)
-      .mapToInt(Integer::intValue).sum(), is(numberOfRecords * 2));
+      .mapToInt(Integer::intValue).sum(), is(numberOfRecords));
     assertThat(job.getJobStatus(), is(AsyncMigrationJob.JobStatus.COMPLETED));
     assertThat(job.getSubmittedDate(), notNullValue());
 
-    postgresClient(getContext(), okapiHeaders()).delete("instances",
-      new Criterion().addCriterion(new Criteria().addField("title").setOperation("like").setVal("test%"))).result();
+    StorageTestSuite.deleteAll(itemsStorageUrl(""));
+    StorageTestSuite.deleteAll(holdingsStorageUrl(""));
+    StorageTestSuite.deleteAll(instancesStorageUrl(""));
   }
 
   @Test
@@ -163,8 +142,8 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
   public void canGetAvailableMigrations() {
     AsyncMigrations migrations = asyncMigration.getMigrations();
     assertNotNull(migrations);
-    assertEquals(Integer.valueOf(3), migrations.getTotalRecords());
-    assertEquals("publicationPeriodMigration", migrations.getAsyncMigrations().get(0).getMigrations().get(0));
+    assertEquals(Integer.valueOf(2), migrations.getTotalRecords());
+    assertEquals("itemShelvingOrderMigration", migrations.getAsyncMigrations().get(0).getMigrations().get(0));
   }
 
   @Test
@@ -188,7 +167,7 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     get(repository.save(migrationJob.getId(), migrationJob).toCompletionStage()
       .toCompletableFuture());
     var amc = new AsyncMigrationContext(getContext(), okapiHeaders(), postgresClientFuturized);
-    jobRunner().startAsyncMigration(migrationJob, new AsyncMigrationContext(amc, "publicationPeriodMigration"));
+    jobRunner().startAsyncMigration(migrationJob, new AsyncMigrationContext(amc, "itemShelvingOrderMigration"));
 
     asyncMigration.cancelMigrationJob(migrationJob.getId());
 
@@ -206,8 +185,8 @@ public class AsyncMigrationTest extends TestBaseWithInventoryUtil {
     return new PostgresClientFuturized(postgresClient);
   }
 
-  private PublicationPeriodMigrationJobRunner jobRunner() {
-    return new PublicationPeriodMigrationJobRunner();
+  private ShelvingOrderMigrationJobRunner jobRunner() {
+    return new ShelvingOrderMigrationJobRunner();
   }
 
   private AsyncMigrationJobRepository getRepository() {
